<resources>
    <string name="app_name">GroceryList</string>
    <string name="action_settings">Share</string>
    <string name="add_item">Add First Item</string>
    <string name="enter_item">Enter Grocery Item</string>
    <string name="hint_item">Enter Item</string>
    <string name="item_quantity">Enter Quantity</string>
    <string name="save_item">Save</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="alert_title">Are You Sure to Delete?</string>
    <string name="negative_option">No</string>
    <string name="positive_option">Yes</string>
</resources>
