<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:orientation="vertical"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:id="@+id/linear_layout">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/title"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/enter_item"/>

            <EditText
                android:id="@+id/item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:hint="@string/hint_item"
              />

            <EditText
                android:id="@+id/item_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_name"
                android:layout_marginTop="15dp"
                android:hint="@string/item_quantity"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/add_button"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/item_quantity"
                android:text="@string/save_item"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:background="@drawable/button_bd_rounded_corners"
                />

        </RelativeLayout>

        
    </android.support.v7.widget.CardView>
</LinearLayout>