<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="23dp">

            <TextView
                android:id="@+id/textHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:paddingTop="5dp"
                android:text="@string/alert_title"
                android:textSize="17sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/negativeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textHeader"
                android:layout_marginTop="19dp"
                android:background="@drawable/button_bd_rounded_corners"
                android:text="@string/negative_option"
                android:textColor="@android:color/white"/>

            <Button
                android:id="@+id/positiveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/negativeButton"
                android:layout_alignParentRight="true"
                android:layout_marginTop="19dp"
                android:background="@drawable/button_bd_rounded_corners"
                android:text="@string/positive_option"
                android:textColor="@android:color/white"/>

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>